redeleting landing.html, updating index links to reflect name change

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1>This is my header.</h1>
                 <ul class="navigation">
                     <li>
-                        <a href="landing.html">HOME</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>
                         <a href="#">NAVIGATION TWO</a>
